//
//  AppConstants.swift
//  CVSAssignment
//
//  Created by Rajesh Bandarupalli on 1/15/25.
//

import Foundation
/// App constants
struct AppConstants {
    static let baseURL = "https://api.flickr.com/services/feeds/photos_public.gne?format=json&nojsoncallback=1&tags="
    static let viewCornerRadius = 6.0
    static let idleMessage = "Enter a search term to find images."
    static let searchBarPlaceHolder = "Search by tags"
    static let noResultsFound = "No results found."
    static let error = "Error:"
    static let flickrBaseViewTitle = "Flickr Search"
    //DetailView Contants
    static let flickrDetailViewTitle = "Image Detail"
    static let title = "Title: "
    static let dscription = "Description:"
    static let publishedDate = "Published:"
    static let author = "Author:"
    
}
